--- a/login.html
+++ b/login.html
@@ -162,7 +162,7 @@
 
     <!-- Error Pop-up -->
     <div id="error-popup" class="error-popup">
-        📵 Number not found in our RECORDS! Double-check your phone number or contact <a href="https://www.instagram.com/wiizearn/" target="_blank">Admin Manto</a> on Instagram.🔔
+        📵 Number not found in our RECORDS! Double-check your phone number or contact <a href="https://www.instagram.com/wizz_earn_rwanda/" target="_blank">Admin-support💁‍♂️</a> on Instagram.🔔
     </div>
 
     <!-- JavaScript -->
@@ -178,7 +178,7 @@
             const errorPopup = document.getElementById("error-popup");
 
             if (!validNumbers.includes(phoneNumber)) {
-                errorPopup.innerHTML = `📵 Number not found in our RECORDS! Double-check your phone number or contact <a href="https://www.instagram.com/patrick_lastborn/" target="_blank">Admin Manto</a> on Instagram.🔔`;
+                errorPopup.innerHTML = `📵 Number not found in our RECORDS! Double-check your phone number or contact <a href="https://www.instagram.com/wizz_earn_rwanda/" target="_blank">Admin Manto</a> on Instagram.🔔`;
                 errorPopup.classList.add("show");
                 setTimeout(() => {
                     errorPopup.classList.remove("show");
