--- a/payment.html
+++ b/payment.html
@@ -242,7 +242,7 @@
             <!-- Mentor Contact -->
             <div class="mentor-message">
                 <p>Need help with login details? Contact your mentor:</p>
-                <a href="https://www.instagram.com/wiizearn/" target="_blank" class="mentor-link">Talk to Mentor on Instagram</a>
+                <a href="https://www.instagram.com/wizz_earn_rwanda/" target="_blank" class="mentor-link">Talk to admin on Instagram</a>
             </div>
         </section>
 
