--- a/index.html
+++ b/index.html
@@ -508,7 +508,7 @@
             <h3 class="text-lg font-semibold">People Who Work With Us</h3>
             <div class="mt-4 flex justify-center space-x-8">
                 <div class="flex flex-col items-center">
-                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcStRvrANLeuIx-q8ESvwDRvmgOEIBD8NBe5EA&s" alt="Bank of Kiagali" class="h-12 w-12 rounded-full">
+                    <img src="https://pfst.cf2.poecdn.net/base/image/186abc5b0c107e9b805659fc2077b900c3efc41f435172dfc72d97ec9a4bb19e?w=1024&h=768&pmaid=319580829" alt="Bank of Kiagali" class="h-12 w-12 rounded-full">
                     <span class="text-sm mt-1">Bank of Kiagali</span>
                 </div>
                 <div class="flex flex-col items-center">
