--- a/index.html
+++ b/index.html
@@ -508,7 +508,7 @@
             <h3 class="text-lg font-semibold">People Who Work With Us</h3>
             <div class="mt-4 flex justify-center space-x-8">
                 <div class="flex flex-col items-center">
-                    <img src="https://pfst.cf2.poecdn.net/base/image/186abc5b0c107e9b805659fc2077b900c3efc41f435172dfc72d97ec9a4bb19e?w=1024&h=768&pmaid=319580829" alt="Bank of Kiagali" class="h-12 w-12 rounded-full">
+                    <img src="https://pfst.cf2.poecdn.net/base/image/79ac529fe0bf5044a56fe505ff869b90855361aca2ec12980981654a139c91c2?w=1024&h=768&pmaid=319583650" alt="Vid-mulla" class="h-12 w-12 rounded-full">
                     <span class="text-sm mt-1">Bank of Kiagali</span>
                 </div>
                 <div class="flex flex-col items-center">
@@ -516,8 +516,8 @@
                     <span class="text-sm mt-1">MTN Rwanda</span>
                 </div>
                 <div class="flex flex-col items-center">
-                    <img src="https://media.licdn.com/dms/image/v2/D4D0BAQGl6A2fS5XQmQ/company-logo_200_200/company-logo_200_200/0/1702711337916/youthculturerw_logo?e=2147483647&v=beta&t=DgdGQraOa01zjFglXImV8jtWUiBSEG7XvtTM7XgnaTs" alt="Ministry of Youth and Arts" class="h-12 w-12 rounded-full">
-                    <span class="text-sm mt-1">Ministry of Youth and Arts</span>
+                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR9-d7wNvaQKNHsG3rJGZ1XzPVqf6AjSFR8UQ&s" alt="Ministry of Youth and Arts" class="h-12 w-12 rounded-full">
+                    <span class="text-sm mt-1">fortebet</span>
                 </div>
             </div>
         </div>
