--- a/index.html
+++ b/index.html
@@ -509,7 +509,7 @@
             <div class="mt-4 flex justify-center space-x-8">
                 <div class="flex flex-col items-center">
                     <img src="https://pfst.cf2.poecdn.net/base/image/79ac529fe0bf5044a56fe505ff869b90855361aca2ec12980981654a139c91c2?w=1024&h=768&pmaid=319583650" alt="Vid-mulla" class="h-12 w-12 rounded-full">
-                    <span class="text-sm mt-1">Bank of Kiagali</span>
+                    <span class="text-sm mt-1">Vid-mulla</span>
                 </div>
                 <div class="flex flex-col items-center">
                     <img src="https://upload.wikimedia.org/wikipedia/commons/9/93/New-mtn-logo.jpg" alt="MTN Rwanda" class="h-12 w-12 rounded-full">
