--- a/index.html
+++ b/index.html
@@ -1,6 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta name="description" content="Discover Vid Mulla on Wazii Earn. Visit https://waziiearn.onrender.com/ to learn more and start earning online in Rwanda." />
+<meta name="keywords" content="Vid Mulla, Wazii Earn, online earning Rwanda, make money online, digital income, Rwanda business" />
+<meta name="author" content="Wazii Earn" />
+<meta property="og:title" content="Vid Mulla - Wazii Earn" />
+<meta property="og:description" content="Find Vid Mulla on Wazii Earn and explore online earning opportunities in Rwanda." />
+<meta property="og:url" content="https://waziiearn.onrender.com/" />
+<meta property="og:type" content="website" />
+<meta property="og:image" content="https://waziiearn.onrender.com/images/preview.jpg" />
+<meta name="robots" content="index, follow" />
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>online-video earning platform-get paid on watching videos & likes</title>
