--- a/index.html
+++ b/index.html
@@ -495,7 +495,7 @@
     <div class="container mx-auto">
         <div class="text-center">
             <h2 class="font-bold text-primary text-lg mb-2">Rwanda Vid Earn</h2>
-            <p class="text-sm text-gray-600 dark:text-gray-400">© 2025 All Rights Reserved</p>
+            <p class="text-sm text-gray-600 dark:text-gray-400">©2025 -👇 contact us 👇</p>
         </div>
         <div class="flex justify-center space-x-4 mt-4">
             <a href="https://www.instagram.com/patrick_lastborn/" class="text-gray-600 dark:text-gray-400 hover:text-primary">
