--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                         <div class="logo-pulse mr-2 text-white text-3xl">
                             <i class="fas fa-video"></i>
                         </div>
-                        <h1 class="font-bold text-white text-xl md:text-2xl">Rwanda Vid Earn</h1>
+                        <h1 class="font-bold text-white text-xl md:text-2xl"> Vid-mulla Earn</h1>
                     </div>
                     <nav>
                         <button id="login-nav-btn" class="bg-white text-primary font-semibold py-2 px-4 rounded-lg transition hover:bg-opacity-90">
@@ -132,7 +132,7 @@
                 <div class="grid grid-cols-1 md:grid-cols-2 gap-8 items-center">
                    <!-- Welcome Text -->
 <div class="order-2 md:order-1">
-    <h2 class="text-3xl md:text-4xl font-bold mb-4 text-primary">Welcome to Rwanda Vid Earn!</h2>
+    <h2 class="text-3xl md:text-4xl font-bold mb-4 text-primary">Welcome to  Vid-mulla !</h2>
     <div class="space-y-4">
         <p class="text-lg">Make money online by simply watching videos in your spare time!</p>
         <div class="bg-primary bg-opacity-10 p-4 rounded-lg border-l-4 border-primary">
@@ -170,13 +170,13 @@
 <div id="terms-modal" class="modal hidden fixed inset-0 bg-black bg-opacity-90 flex items-center justify-center">
     <div class="bg-black text-white p-6 rounded-lg shadow-lg w-11/12 md:w-1/2">
         <h3 class="font-bold text-xl mb-4">Terms and Conditions of Use</h3>
-        <p class="mb-4">By using Rwanda Vid Earn, you agree to the following terms and conditions:</p>
+        <p class="mb-4">By using Vid-mulla Earn, you agree to the following terms and conditions:</p>
         <ol class="list-decimal list-inside space-y-2">
             <li class="font-bold">You must be at least 18 years old to register and use this service.</li>
             <li class="font-bold">All information provided during registration must be accurate and up-to-date.</li>
             <li class="font-bold">You are responsible for maintaining the confidentiality of your account credentials.</li>
             <li class="font-bold">Any attempt to manipulate or cheat the system may result in account suspension or termination.</li>
-            <li class="font-bold">Rwanda Vid Earn reserves the right to modify or discontinue services at any time without notice.</li>
+            <li class="font-bold"> Vid-mulla Earn reserves the right to modify or discontinue services at any time without notice.</li>
             <li class="font-bold">All earnings are subject to verification and may take time to process.</li>
             <li class="font-bold">We are not responsible for any technical issues that may prevent access to the platform.</li>
             <li class="font-bold">By participating, you agree that you are aware of lost of your money due to any time is scam!</li>
@@ -244,7 +244,7 @@
 
     <main class="flex-grow container mx-auto px-4 py-8 md:py-12 flex justify-center items-center">
         <div class="bg-white dark:bg-dark-card rounded-lg shadow-lg p-6 md:p-8 w-full max-w-md">
-            <h2 class="text-2xl font-bold mb-6 text-center text-primary">Join Rwanda Vid Earn</h2>
+            <h2 class="text-2xl font-bold mb-6 text-center text-primary">Join  Vid-mulla Earn</h2>
             <form id="registration-form" class="space-y-6">
                 <div>
                     <label for="fullname" class="block text-sm font-medium mb-1">Full Name</label>
@@ -479,7 +479,7 @@
         setTimeout(() => {
             element.classList.remove('shake');
         }, 500);
-        alert("🔥⚠ Your account is not activated. Please contact admin at: https://wa.me/+250799379271");
+        alert("🔥⚠ Your account is not activated. Please contact admin at: telegram");
     }
 
     document.addEventListener("DOMContentLoaded", function () {
@@ -494,7 +494,7 @@
 <footer class="bg-gray-100 dark:bg-dark-card py-6 px-4">
     <div class="container mx-auto">
         <div class="text-center">
-            <h2 class="font-bold text-primary text-lg mb-2">Rwanda Vid Earn</h2>
+            <h2 class="font-bold text-primary text-lg mb-2"> Vid-mulla Earn</h2>
             <p class="text-sm text-gray-600 dark:text-gray-400">©2025 -👇 contact us 👇</p>
         </div>
         <div class="flex justify-center space-x-4 mt-4">
@@ -512,7 +512,7 @@
             </a>
         </div>
         <div class="text-center mt-4 text-sm text-gray-600 dark:text-gray-400">
-            Terms of Service | Privacy Policy | Contact Us
+    
         </div>
         <div class="mt-6 text-center">
             <h3 class="text-lg font-semibold">People Who Work With Us</h3>
@@ -558,7 +558,7 @@
         <div id="how-it-works-modal" class="modal modal-hidden fixed inset-0 flex items-center justify-center z-50 bg-black bg-opacity-50">
             <div class="modal-content bg-white dark:bg-dark-card rounded-lg shadow-lg p-6 max-w-md mx-4 transform -translate-y-10 max-h-[90vh] overflow-y-auto">
                 <div class="flex justify-between items-center mb-4">
-                    <h3 class="text-xl font-bold">How Rwanda Vid Earn Works</h3>
+                    <h3 class="text-xl font-bold">How vid-mulla Earn Works</h3>
                     <button id="close-how-it-works" class="text-gray-500 hover:text-gray-700 dark:text-gray-400 dark:hover:text-gray-200">
                         <i class="fas fa-times"></i>
                     </button>
