--- a/index.html
+++ b/index.html
@@ -276,8 +276,9 @@
                     <p class="text-sm">To activate your account, you'll need to pay a one-time fee of <span class="font-bold">5,000 RWF</span> to:</p>
                     <div class="mt-2 p-2 bg-white dark:bg-dark-background rounded flex justify-between items-center">
                         <div>
-                            <p class="font-bold">07XXXXXXXX</p>
-                            <p class="text-xs text-gray-600 dark:text-gray-400">Account Holder: XXX JOHN</p>
+                            <p class="font-bold"> +250794092580 </p>
+                            <p class="text-xs text-gray-600 dark:text-gray-400">Account Holder:Miguel SIMBI
+ </p>
                         </div>
                         <button type="button" id="copy-payment-info" class="text-primary">
                             <i class="fas fa-copy"></i>
@@ -286,7 +287,7 @@
                 </div>
                 <div>
                     <label for="transaction-id" class="block text-sm font-medium mb-1">Transaction ID (after payment)</label>
-                    <input type="text" id="transaction-id" name="transaction-id" placeholder="Example: OP2305XXXX" 
+                    <input type="text" id="transaction-id" name="transaction-id" placeholder="Example: OPYTH3832" 
                         class="w-full px-4 py-3 rounded-lg border text-base dark:bg-dark-background dark:text-dark-text focus:outline-none focus:ring-2 focus:ring-primary">
                 </div>
                 <button type="submit" class="w-full bg-primary hover:bg-opacity-90 text-white font-bold py-3 px-6 rounded-lg shadow transition">
