--- a/index.html
+++ b/index.html
@@ -727,7 +727,8 @@
         
         // Copy payment info
         copyPaymentInfoBtn.addEventListener('click', () => {
-            const paymentInfo = "070794477485 (xxxx)";
+            const paymentInfo = "0794092580-Miguel SIMBI
+";
             
             try {
                 navigator.clipboard.writeText(paymentInfo).then(() => {
