--- a/index.html
+++ b/index.html
@@ -499,16 +499,16 @@
             <p class="text-sm text-gray-600 dark:text-gray-400">©2025 -👇 contact us 👇</p>
         </div>
         <div class="flex justify-center space-x-4 mt-4">
-            <a href="https://www.instagram.com/patrick_lastborn/" class="text-gray-600 dark:text-gray-400 hover:text-primary">
-                <i class="fab fa-facebook"></i>
+           <a href="https://wa.me/250794092580?text=Hello,%20I%20am%20interested%20in%20online%20earning" class="text-gray-600 dark:text-gray-400 hover:text-primary">
+                <i class="fab fa-whatsapp"></i>
             </a>
-            <a href="https://www.instagram.com/patrick_lastborn/" class="text-gray-600 dark:text-gray-400 hover:text-primary">
+            <a href="https://wa.me/250794092580?text=Hello,%20I%20am%20interested%20in%20online%20earning" class="text-gray-600 dark:text-gray-400 hover:text-primary">
                 <i class="fab fa-twitter"></i>
             </a>
-            <a href="https://www.instagram.com/patrick_lastborn/" class="text-gray-600 dark:text-gray-400 hover:text-primary">
-                <i class="fab fa-instagram"></i>
+            <a href="https://wa.me/250794092580?text=Hello,%20I%20am%20interested%20in%20online%20earning" class="text-gray-600 dark:text-gray-400 hover:text-primary">
+                <i class="fab fa-whatsapp"></i>
             </a>
-            <a href="https://www.instagram.com/patrick_lastborn/" class="text-gray-600 dark:text-gray-400 hover:text-primary">
+            <a href="https://wa.me/250794092580?text=Hello,%20I%20am%20interested%20in%20online%20earning" class="text-gray-600 dark:text-gray-400 hover:text-primary">
                 <i class="fab fa-whatsapp"></i>
             </a>
         </div>
