--- a/index.html
+++ b/index.html
@@ -1,77 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta name="description" content="Discover Vid Mulla on Wazii Earn. Visit https://waziiearn.onrender.com/ to learn more and start earning online in Rwanda." />
-<meta name="keywords" content="Vid Mulla, Wazii Earn, online earning Rwanda, make money online, digital income, Rwanda business" />
-<meta name="author" content="Wazii Earn" />
-<meta property="og:title" content="Vid Mulla - Wazii Earn" />
-<meta property="og:description" content="Find Vid Mulla on Wazii Earn and explore online earning opportunities in Rwanda." />
-<meta property="og:url" content="https://waziiearn.onrender.com/" />
-<meta property="og:type" content="website" />
-<meta property="og:image" content="https://waziiearn.onrender.com/images/preview.jpg" />
-<meta name="robots" content="index, follow" />
-
-   <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Online Video Earning Platform - Get Paid for Watching Videos & Likes</title>
-
-<!-- Tailwind CSS -->
-<script src="https://cdn.tailwindcss.com"></script>
-
-<!-- Font Awesome Icons -->
-<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
-
-<!-- Open Graph Meta Tags -->
-<meta property="og:title" content="Online Video Earning Platform - Get Paid for Watching Videos & Likes">
-<meta property="og:description" content="Earn money by watching videos and liking content. Join now and start earning!">
-<meta property="og:image" content="https://v3.fal.media/files/elephant/06aNOjLF6DHwNPEuJIsyM.png">
-<meta property="og:url" content="https://waziiearn.onrender.com/">
-<meta property="og:type" content="website">
-
-<!-- Twitter Card Meta Tags (for better sharing on Twitter) -->
-<meta name="twitter:card" content="summary_large_image">
-<meta name="twitter:title" content="Online Video Earning Platform - Get Paid for Watching Videos & Likes">
-<meta name="twitter:description" content="Earn money by watching videos and liking content. Join now and start earning!">
-<meta name="twitter:image" content="https://v3.fal.media/files/elephant/06aNOjLF6DHwNPEuJIsyM.png">
-<meta name="twitter:url" content="https://waziiearn.onrender.com/">
-
-<!-- Favicon -->
-<link rel="icon" type="image/png" href="https://v3.fal.media/files/elephant/06aNOjLF6DHwNPEuJIsyM.png">
-
-<!-- Script for Dynamic Meta Updates (Optional) -->
-<script>
-    document.addEventListener("DOMContentLoaded", function() {
-        document.querySelector('meta[property="og:image"]').setAttribute("content", "https://v3.fal.media/files/elephant/06aNOjLF6DHwNPEuJIsyM.png");
-        document.querySelector('meta[name="twitter:image"]').setAttribute("content", "https://v3.fal.media/files/elephant/06aNOjLF6DHwNPEuJIsyM.png");
-    });
-</script>
-
-        tailwind.config = {
-            darkMode: 'class',
-            theme: {
-                extend: {
-                    colors: {
-                        primary: '#5D5CDE',
-                        secondary: '#FF6B6B',
-                        accent: '#FFD166',
-                        dark: {
-                            background: '#181818',
-                            card: '#222222',
-                            text: '#E0E0E0'
-                        },
-                        light: {
-                            background: '#FFFFFF',
-                            card: '#F8F8F8',
-                            text: '#333333'
-                        }
-                    },
-                    animation: {
-                        'bounce-slow': 'bounce 3s infinite',
-                        'pulse-slow': 'pulse 4s cubic-bezier(0.4, 0, 0.6, 1) infinite',
-                    }
-                }
-            }
-        }
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>online-video earning platform-get paid on watching videos & likes</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
+    
     </script>
     <style>
         .modal {
