--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>online-video earning platform-get paid on watching videos & likes</title>
+    <title>Online Video Earning Platform - Get Paid for Watching Videos & Likes</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
-    
-    </script>
+</head>
+    <script>
     <style>
         .modal {
             transition: opacity 0.3s ease, visibility 0.3s ease;
