--- a/index.html
+++ b/index.html
@@ -1062,7 +1062,7 @@
                                             <span class="text-gray-600 dark:text-gray-400">MTN Mobile Money:</span>
                                         </div>
                                         <div class="flex items-center">
-                                            <span id="mobileNumber" class="font-bold text-primary-700 dark:text-primary-300">+2507XXXXXXXX</span>
+                                            <span id="mobileNumber" class="font-bold text-primary-700 dark:text-primary-300">+250783568044</span>
                                             <button class="ml-2 text-primary-600 hover:text-primary-800 dark:text-primary-400 dark:hover:text-primary-300 focus:outline-none" onclick="copyToClipboard('mobileNumber')">
                                                 <i class="fas fa-copy"></i>
                                             </button>
@@ -1070,7 +1070,7 @@
                                     </div>
                                     <div class="flex justify-between items-center">
                                         <span class="text-gray-600 dark:text-gray-400">Account Holder:</span>
-                                        <span class="font-bold text-primary-700 dark:text-primary-300">JOHN=XXX</span>
+                                        <span class="font-bold text-primary-700 dark:text-primary-300">PATRICK</span>
                                     </div>
                                 </div>
                                 
